[improve][broker] Support cgroup v2 by using `jdk.internal.platform.Metrics` in Pulsar Loadbalancer (#16832)
(cherry picked from commit b8543ad979798d89da9f35a9375de7e16b7e5e25)